--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -1,7 +1,8 @@
 <?xml version="1.0" ?>
 <!DOCTYPE book PUBLIC "-//KDE//DTD DocBook XML V4.1.2-Based Variant V1.1//EN" "dtd/kdex.dtd" [
-  <!ENTITY kmouth '<application>KMouth</application>'>
-  <!ENTITY kapp "&kmouth;">
+  <!ENTITY kmouth 'KMouth'>
+  <!ENTITY kappname "&kmouth;">
+  <!ENTITY package "kdeaccessibility">
   <!ENTITY % addindex "IGNORE">
   <!ENTITY % English "INCLUDE"><!-- change language only here -->
 ]>
@@ -421,7 +422,7 @@
   <title>Credits and License</title>
 
   <para>
-    &kapp;
+    &kappname;
   </para>
   <para>
     Program copyright 2002 Gunnar Schmi Dt <email>gunnar@schmi-dt.de</email>
