CVS_SILENT i18n US spelling fixes
svn path=/trunk/kdeaccessibility/doc/kmouth/; revision=248893

--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -199,7 +199,7 @@
     <sect2 id="preferences">
       <title>The <guilabel>Preferences</guilabel> tab</title>
       <para>
-        The <guilabel>Preferences</guilabel> tab contains options that alter the behaviour of
+        The <guilabel>Preferences</guilabel> tab contains options that alter the behavior of
         &kmouth; in certain situations.
       </para>
       <para>
